syntax = "proto3";

package auth;

option go_package = "traileau-gateway/proto/auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Signup(SignupRequest) returns (SignupResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message SignupRequest {
  string username = 1;
  string password = 2;
}

message SignupResponse {
  string userId = 1;
}